--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 /* Стилі пиши тут :) */
 h1{
    text-align: center;
-   color: blue;
+   color: red;
+}
+body{
+   text-align: center;
 }
 
 </style>
 <body>
-   <p> Hello, World!</p>
    <h1>Світ пончиків</h1>
+    <div>
    <img src="/uploads/2023/02/donut.png">
+    </div>
 </body>
 </html>
+
 
 
